--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  moyasar_payment:
-    path: E:/moyasar_payment/
+  moyasar_payment: ^0.1.4
   logger: ^1.1.0
 
 dev_dependencies:
